--- a/use-effect-class/src/components/todoList.css
+++ b/use-effect-class/src/components/todoList.css
@@ -23,22 +23,23 @@
    padding: 1%;
    padding-left: 4%;
    align-items: center;
+   margin-right: 2%;
+   text-align: left;
    /* width: 99%; */
 }
 .items::-webkit-scrollbar {
-    width: 3px;
+   width: 3px;
 }
 
 .items::-webkit-scrollbar-track {
-    background-color: darkgrey;
+   background-color: rgb(236, 236, 236);
 }
 
 .items::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 .items {
    overflow-y: scroll;
-   scrollbar-gutter:  stable both-edges;
+   scrollbar-gutter: stable both-edges;
    /* margin-right: 1%; */
 }
-
