--- a/todo-app/src/components/todo.css
+++ b/todo-app/src/components/todo.css
@@ -1,28 +1,92 @@
+body {
+   background-color: #e5e5e5;
+}
+
+::placeholder{
+   color: white;
+   font-weight: 400;
+}
+
 .entire {
    display: flex;
    flex-direction: column;
    width: 20%;
    margin: auto;
    margin-top: 5%;
+   padding: 3%;
+   background-color: #F2E7FE;
+   border-radius: 15px;
+   margin-bottom: 3%;
+   border: 1px solid #bc8af3;
 }
 
 .topPart {
    display: flex;
    justify-content: space-evenly;
+   background-color: #F2E7FE;
+   height: 50px;
+   border-radius: 15px;
+   margin-bottom: 3px;
 }
 .topPart button {
    margin: auto;
    flex: 1;
+   background-color: #bc8af3;
+   border: none;
+   height: 35px;
+   border-top-right-radius: 10px;
+   border-bottom-right-radius: 10px;
+   height: 50px;
+   color: white;
+   cursor: pointer;
 }
 .topPart input {
-   flex: 3;
+   color: white;
+   background-color: #bc8af3;
+   flex: 8;
+   border: none;
+   padding: 0 10px;
+   border-top-left-radius: 10px;
+   border-bottom-left-radius: 10px;
+   margin-bottom: 1%;
+   height: 50px;
+   font-weight: bold;
 }
-.flex {
+.item {
    display: flex;
-   border: 1px solid red;
+   border: 1px solid rgba(211, 211, 211, 0.5);
+   padding: 0 10px;
    margin: auto;
+   background-color: white;
+   justify-content: space-between;
+   align-items: center;
+   border-radius: 15px;
+   height: 45px;
+   margin-top: 1px;
+   /* margin-top: 2%; */
 }
 
 .lineThrough {
    text-decoration: line-through;
+}
+.showCompleted{
+   height: 30px;
+   font-size: 12px;
+   border: none;
+   background-color: #bc8af3;
+   color: white;
+   border-radius: 10px;
+   margin-top: 5%;
+   cursor: pointer;
+}
+
+.Completed{
+   color: rgb(43, 43, 43);
+   font-weight: 500;
+}
+
+.removeButton{
+   background-color: transparent;
+   border: none;
+   cursor: pointer;
 }
