--- a/restaurant/src/App.css
+++ b/restaurant/src/App.css
@@ -21,7 +21,7 @@
 .restaurantCard:hover {
    transform: scale(1.02);
    /* opacity: 0; */
-   transition: .5s ease-in;
+   transition: 0.5s ease-in;
 }
 
 .up {
@@ -96,4 +96,27 @@
    border: none;
    /* height: 30px; */
    width: 100px;
+   height: 100%;
+}
+
+.form {
+   display: flex;
+   height: 40px;
+   margin: auto;
+   margin-bottom: 0.5%;
+   margin-top: 1%;
+   width: 95%;
+   /* border: 2px solid rgb(150, 178, 156); */
+   padding: 5px;
+}
+.smallInput {
+   width: 120px;
+   margin-left: 10px;
+   padding-left: 10px;
+}
+.submit {
+   border: none;
+   background-color: green;
+   color: white;
+   font-weight: bold;
 }
