--- a/U5C2/src/App.css
+++ b/U5C2/src/App.css
@@ -54,7 +54,7 @@
    width: 30%;
   display: flex;
   flex-direction: column;
-  border: 1px solid red;;
+  /* border: 1px solid red; */
   text-align:justify;
   margin: auto;
   /* align-items: center; */
