--- a/google-timer/src/App.css
+++ b/google-timer/src/App.css
@@ -1,42 +1,32 @@
 .App {
-  text-align: center;
+   /* zoom : 5; */
+   text-align: center;
+   /* margin-top: 4%; */
+   /* padding-top : 5%; */
+   background-color: #303030;
+   color: white;
+   /* height: 90vh; */
+   width: 100%;
+   height: 100vh;
+   display: flex;
+   flex-direction: column;
+}
+.App button {
+   margin-left: 5px;
+   border: none;
+   background-color: #083478;
+   color: white;
+   font-size: 2rem;
+   padding: 10px 30px;
+   cursor: pointer;
+   width: min-content;
+   margin: auto;
+   margin-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+.components {
+   /* padding-top: 5%; */
+   font-size: 7rem;
+   align-items: center;
+   justify-content: center;
 }
