--- a/google-timer/src/components/timer.css
+++ b/google-timer/src/components/timer.css
@@ -7,3 +7,15 @@
     padding: 10px 30px;
     cursor: pointer;
 }
+
+.inputs{
+    font-size: 1rem;
+    margin: 10px;
+    margin-bottom: 0;
+    /* border: 1px solid red; */
+}
+.inputs input {
+    margin-left: 5px;
+    padding: 5px;
+    border: none;
+}
