--- a/google-timer/src/components/timer.css
+++ b/google-timer/src/components/timer.css
@@ -15,7 +15,9 @@
     /* border: 1px solid red; */
 }
 .inputs input {
-    margin-left: 5px;
+    margin-left: 8px;
+    margin-right: 8px;
+    width: 70px;
     padding: 5px;
     border: none;
 }
