--- a/router-project-adnan-khateeb/src/App.css
+++ b/router-project-adnan-khateeb/src/App.css
@@ -1,3 +1,67 @@
 .App {
    text-align: center;
 }
+.content {
+   margin-bottom: 4%;
+}
+.store {
+   display: grid;
+   grid-template-columns: repeat(2, 1fr);
+   width: 75%;
+   margin: auto;
+   margin-top: 2%;
+   background: white;
+   padding: 7%;
+   border-radius: 15px;
+   border: 1px solid rgb(243, 243, 243);
+}
+.product {
+   background: transparent;
+   width: 500px;
+   border-radius: 15px;
+}
+.product * {
+   text-decoration: none;
+   color: black;
+}
+.product:hover {
+   /* width: 40%; */
+   transform: scale(1.3);
+   background: #fff;
+   border: 1px solid rgb(243, 243, 243);
+   transition: 1.1s;
+   /* width: 50%; */
+}
+
+.productDetails {
+   margin-top: 5%;
+}
+
+.cartBtn {
+   color: white;
+   background-color: #0071e3;
+   border-radius: 20px;
+   border: none;
+   font-size: 20px;
+   width: 100px;
+   cursor: pointer;
+   padding: 15px;
+}
+
+.toStore {
+
+   color: white;
+   background-color: #0071e3;
+   border-radius: 20px;
+   border: none;
+   font-size: 32px;
+   width: 250px;
+   cursor: pointer;
+   padding: 15px;
+   margin-top: 2%;
+
+}
+.toStore:hover{
+   transform: scale(1.07);
+   transition: 0.7s;
+}
