--- a/router-project-adnan-khateeb/src/components/styles/footer.css
+++ b/router-project-adnan-khateeb/src/components/styles/footer.css
@@ -2,6 +2,6 @@
    background-color: #f5f5f7;
    /* margin-top: 100vh; */
    bottom: 0;
-   position: fixed;
+   position: absolute;
    width: 100%;
 }
