--- a/rm-101-e1-main/src/components/taskApp.module.css
+++ b/rm-101-e1-main/src/components/taskApp.module.css
@@ -1,3 +1,10 @@
 .taskApp {
-  /* Sample */
+   /* Sample */
+   width: 20%;
+   margin: auto;
+   margin-top: 5%;
+   margin-bottom: 5%;
+   border: 1px solid gray;
+   text-align: center;
+   padding: 1%;
 }
